Bug 119690 - Pop-ups over tools dialog allow interaction w underlying window ( not GTK )
Summary: Pop-ups over tools dialog allow interaction w underlying window ( not GTK )
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-04 11:30 UTC by Xisco Faulí
Modified: 2018-09-04 18:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-09-04 11:30:52 UTC
Steps to reproduce:
1. Open LibreOffice
2. Go to Tools - Options - Advanced and enabled Experimental features
3. Click on Apply -> Restart dialog is prompted
4. Click on the underlying tools dialog

Observed behaviour: The restart dialog goes to the background. it's not possible to interact with the tools dialog until the restart dialog is closed, making it very confusing.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: bf8fbbaa683ef7eef5f9587b60486f622b50cb80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

but not with GTK.

The problem with the restart button not working is tracked in bug 118608
Comment 1 Xisco Faulí 2018-09-04 11:31:39 UTC
The Apply button was added recently in https://cgit.freedesktop.org/libreoffice/core/commit/?id=92026741ed7e83119f1de51528480c5a937c0e88

Adding 	Diadlo to the loop
Comment 2 Xisco Faulí 2018-09-04 11:32:13 UTC
Caolán, this is similar to bug 118799, I thought you could be interested...
Comment 3 Commit Notification 2018-09-04 15:57:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8d7b1f2e7c13a1ebcf6dfa2afed80f1df6d2565d

tdf#119690 on 'apply' options dialog is still up, use that as parent

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.