tdf#119690 on 'apply' options dialog is still up, use that as parent

Change-Id: Icecf6bd2981a5b96c594a706238e8baf9b5a8149